// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with logo 1`] = `
<DocumentFragment>
  <a
    class="CompanyCard Card card"
    href="/companies/rithm"
  >
    <div
      class="card-body"
    >
      <h6
        class="card-title d-flex justify-content-between"
      >
        <span
          class="text-capitalize"
        >
          Rithm School
        </span>
        <img
          alt="Rithm School Logo"
          src="https://pbs.twimg.com/profile_images/770491761412173826/ZUeIa4tw_400x400.jpg"
        />
      </h6>
      <p>
        Become an exceptional developer in 16 weeks.
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`matches snapshot without logo 1`] = `
<DocumentFragment>
  <a
    class="CompanyCard Card card"
    href="/companies/algo"
  >
    <div
      class="card-body"
    >
      <h6
        class="card-title d-flex justify-content-between"
      >
        <span
          class="text-capitalize"
        >
          Algo School
        </span>
        <img
          alt="Algo School Logo"
          src="default-logo.png"
        />
      </h6>
      <p>
        Become a mediocre developer in 160 weeks.
      </p>
    </div>
  </a>
</DocumentFragment>
`;
